--- a/manifests/mongo-app/mongodb-deployment.yml
+++ b/manifests/mongo-app/mongodb-deployment.yml
@@ -30,6 +30,11 @@ spec:
             secretKeyRef:
               name: mongodb-secret
               key: mongo-root-password 
+        - name: ME_CONFIG_MONGODB_SERVER
+          valueFrom: 
+            configMapKeyRef:
+              name: mongodb-configmap
+              key: database_url
 ---
 apiVersion: v1
 kind: Service
