--- a/manifests/mongo-app/mongo-express-deployment.yml
+++ b/manifests/mongo-app/mongo-express-deployment.yml
@@ -33,5 +33,19 @@ spec:
           - name: ME_CONFIG_MONGODB_SERVER
             valueFrom:
               configMapKeyRef:
-                name: mongo-configmap
+                name: mongodb-configmap
                 key: database_url
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo-express-service
+spec:
+  selector:
+    app: mongo-express
+  type: LoadBalancer
+  ports:
+  - port: 8081
+    targetPort: 8081
+    protocol: TCP
+    nodePort: 30000
