--- a/manifests/mongo-app/mongo-db-deployment.yml
+++ b/manifests/mongo-app/mongo-db-deployment.yml
@@ -18,7 +18,7 @@ spec:
       - name: mongodb
         image: mongo:latest
         ports:
-        - containerPort: 27017   
+        - containerPort: 27017
         env:
         - name: MONGO_INITDB_ROOT_USERNAME
           valueFrom:
@@ -26,15 +26,10 @@ spec:
               name: mongodb-secret
               key: mongo-root-username
         - name: MONGO_INITDB_ROOT_PASSWORD
-          valueFrom:
+          valueFrom: 
             secretKeyRef:
               name: mongodb-secret
-              key: mongo-root-password 
-        - name: ME_CONFIG_MONGODB_SERVER
-          valueFrom: 
-            configMapKeyRef:
-              name: mongodb-configmap
-              key: database_url
+              key: mongo-root-password
 ---
 apiVersion: v1
 kind: Service
@@ -44,6 +39,6 @@ spec:
   selector:
     app: mongodb
   ports:
-  - port: 27017
-    targetPort: 27017
-    protocol: TCP
+    - protocol: TCP
+      port: 27017
+      targetPort: 27017
